dpf-ax changelog

	by <hackfin@section5.ch>
	Find details in the git or svn logs.


Mon, 28 Okt 2013
       by superelchi
       * Fixed bug in identify.py:
         custom_tables sometimes not written to lcdinit.s.
       * Added missing "executable" property for identify.py
       * New models:
	 - acme_3 (thx johni85).
	 - acme_4 (thx nexus).
	 - acme_5 (thx binary).
	 - acme_6 (thx Pepe).
	 - clas_ohlson_2 (thx josef).
	 - coby_dp151_bw_2 (thx Deamon666).
	 - dhgate (thx Rollkopf).
	 - kaiser_baas_n1879 (thx John).
         - neckermann (thx Anaeijon).
	 - newfrog (thx LUISE).
	 - tao_80013 (thx richard).
	 - taobao_2 (thx elickson).

Fre, 21 Jun 2013
       by superelchi
       * Changed model:
         - abeyerr_black_3: added param to swap left/right button.
       * New models:
	 - delightdigi_3 (thx fling).
         - dinodirect (thx kodi).
	 - estation100 (thx galvan).

Thu, 23 May 2013
v0.42 by superelchi
       * Removed lcd4linux patch. Current lcd4linux svn revision has this patch already applied.
       * tools/detect.py: added flash manufacturer Nantronics (thx Stanislav Brabec).

Mon, 20 May 2013
v0.41 by superelchi
      * New folder src/dpfcore4driver with linux driver support files.
      * New lcd4linux patch that works with current svn.
	Features:
	 - Driver is self-contained, no external dpf-ax libs/headers needed.
	   Uses code from the new dpfcore4driver files.
         - Includes scaletext patch (variable font size).
         - Support for Property 'Backlight': Values: 0-7 (0 = off, 7 = max).
         - Support for  Property 'Orientation':
             Values: 0 = landscape, 1 = portrait, 2 = reverse landscape, 3 = reverse portrait.
       * New lcd4linux sample configs for 128x128, 240x320 and 320x240.

Thu, 16 May 2013
       by superelchi
       * Small src/Makefile fix.

Mon, 13 May 2013
       by superelchi
       * Makefile fixes:
         - Changed grep expressions in src/Makefile fpr better compatibility.
       * Changed model: